# play-song

./: .editorconfig  .gitignore  Build Search Query.applescript  Build Search Query.scpt  Build Song Search Query.applescript  Build Song Search Query.scpt  Configuration.applescript  Configuration.scpt  Filter Albums.applescript  Filter Albums.scpt  Filter Artists.applescript  Filter Artists.scpt  Filter Genres.applescript  Filter Genres.scpt  Filter Playlists.applescript  Filter Songs by Name.applescript  Filter Songs by Name.scpt  Filter Songs.applescript  Filter Songs.scpt  Get Search Query.scpt  LICENSE.txt  Play Album.applescript  Play Album.scpt  Play Artist.applescript  Play Artist.scpt  Play Genre.applescript  Play Genre.scpt  Play Playlist.applescript  Play Song (Alfred 2).alfredworkflow  Play Song (Alfred 3).alfredworkflow  Play Song (Alfred 4).alfredworkflow  Play Song (Alfred 5).alfredworkflow  Play Song - Catalina (Alfred 4).alfredworkflow  Play Song in iTunes.applescript  Play Song in iTunes.scpt  Play Song.alfredworkflow  Play Song.applescript  Play Song.scpt  Queue Album.scpt  Queue Artist.scpt  (+17 more)
actions/: clearcache.applescript  clearqueue.applescript  getsearchquery.applescript  play-album.applescript  play-artist.applescript  play-direct.applescript  play-genre.applescript  play-playlist.applescript  play-song.applescript  play-v1.applescript  play.applescript  playqueue.applescript  queue.applescript  shuffleoff.applescript  shuffleon.applescript  shuffletoggle.applescript
applescripts/: config.applescript  filter-albums.applescript  (+10 more)
tests/: utils.py  (+10 more)
(+35 files in other folders)
